fix: text-align pagina sobre

--- a/assets/styles/sobre.css
+++ b/assets/styles/sobre.css
@@ -34,7 +34,7 @@
 }
 
 .service-description {
-    text-align: justify;
+    text-align: left;
     width: 80%;
     height: 100%;
     background-color: #141C23;
